# market-regime-detector

./: LICENSE  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
examples/: example_spy_commands.md
market_regime_detector/: __init__.py  backtest.py  cli.py  data.py  features.py  regimes.py  visualization.py
tests/: test_smoke.py
